MCP-34 Synchronize plugins form the server at startup